# StoryLines

./: .gitignore  LICENSE  README  README.md  README.tex  README.txt  example.py  example.tex  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py  storylines.py
doc/: Makefile  conf.py  index.rst
doc/examples/: colors.rst  example.rst  faces.rst  fatband.rst  mandelbrot.rst  moebius.rst  png.rst  project.rst  shortcut.rst
doc/modules/: calc.rst  color.rst  convert.rst  cut.rst  fatband.rst  files.rst  group.rst  plot.rst  png.rst  proj.rst  storylines.rst
examples/: colors.py  example.py  faces.py  fatband.py  makefile  mandelbrot.py  moebius.py  png.py  project.py  shortcut.py
logo/: Makefile  logo.sh  logo.tex  optimize.py
storylines/: __init__.py  calc.py  color.py  convert.py  cut.py  fatband.py  files.py  group.py  plot.py  png.py  proj.py
