[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "StoryLines"
dynamic = ["version"]
authors = [{name = "Jan Berges"}]
description = "Line plots with Python & TikZ"
readme = "README.md"
urls = {Homepage = "https://github.com/janberges/StoryLines"}
classifiers = [
    "Programming Language :: Python",
    "License :: Freely Distributable",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=2.7"

[tool.setuptools]
dynamic = {version = {attr = "storylines.__version__"}}
packages = {find = {namespaces = false}}
