[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "storylines"
dynamic = ["version"]
authors = [{name = "Jan Berges"}]
description = "Line plots with Python & TikZ"
readme = "README.md"
license = {file = "LICENSE"}
urls = {Homepage = "https://github.com/janberges/StoryLines"}
classifiers = [
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python",
]
requires-python = ">=2.7"
