[metadata]
name = StoryLines
version = attr: storylines.__version__
author = Jan Berges
author_email =
description = Line plots with Python & TikZ
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/janberges/StoryLines
classifiers =
    Programming Language :: Python
    License :: Freely Distributable
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=2.7
install_requires =
